--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/images/nilenexus1.png" />
+    <link rel="icon" type="image/png" href="../assets/nilenexus1.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nile Nexus Talents Ltd - Technical & Creative Agency</title>
     <meta name="description" content="Empowering Businesses with Reliable Technical Expertise. From software development to IT support, Nile Nexus Talents delivers scalable, modern solutions for UK businesses." />
